--- a/p8105_hw5_jc5313.md
+++ b/p8105_hw5_jc5313.md
@@ -52,61 +52,86 @@ totals by city.
 ``` r
 summary_by_city = homicidetidy %>% 
   group_by(city_state) %>% 
-  summarize(homicides_total = n(), 
-            unsolved_total = sum(disposition == c("Closed without arrest", "Open/No arrest")))
+  summarize(homicides_n = n(), 
+            unsolved_n = sum(disposition == c("Closed without arrest", "Open/No arrest")))
 knitr::kable(summary_by_city)
 ```
 
-| city_state         | homicides_total | unsolved_total |
-|:-------------------|----------------:|---------------:|
-| Albuquerque, NM    |             378 |             75 |
-| Atlanta, GA        |             973 |            172 |
-| Baltimore, MD      |            2827 |            906 |
-| Baton Rouge, LA    |             424 |            102 |
-| Birmingham, AL     |             800 |            192 |
-| Boston, MA         |             614 |            154 |
-| Buffalo, NY        |             521 |            157 |
-| Charlotte, NC      |             687 |            101 |
-| Chicago, IL        |            5535 |           2046 |
-| Cincinnati, OH     |             694 |            151 |
-| Columbus, OH       |            1084 |            308 |
-| Dallas, TX         |            1567 |            381 |
-| Denver, CO         |             312 |             82 |
-| Detroit, MI        |            2519 |            739 |
-| Durham, NC         |             276 |             51 |
-| Fort Worth, TX     |             549 |            125 |
-| Fresno, CA         |             487 |             88 |
-| Houston, TX        |            2942 |            705 |
-| Indianapolis, IN   |            1322 |            309 |
-| Jacksonville, FL   |            1168 |            305 |
-| Kansas City, MO    |            1190 |            251 |
-| Las Vegas, NV      |            1381 |            274 |
-| Long Beach, CA     |             378 |             81 |
-| Los Angeles, CA    |            2257 |            551 |
-| Louisville, KY     |             576 |            139 |
-| Memphis, TN        |            1514 |            259 |
-| Miami, FL          |             744 |            225 |
-| Milwaukee, wI      |            1115 |            197 |
-| Minneapolis, MN    |             366 |             89 |
-| Nashville, TN      |             767 |            130 |
-| New Orleans, LA    |            1434 |            479 |
-| New York, NY       |             627 |            102 |
-| Oakland, CA        |             947 |            255 |
-| Oklahoma City, OK  |             672 |            158 |
-| Omaha, NE          |             409 |             80 |
-| Philadelphia, PA   |            3037 |            684 |
-| Phoenix, AZ        |             914 |            250 |
-| Pittsburgh, PA     |             631 |            169 |
-| Richmond, VA       |             429 |             53 |
-| Sacramento, CA     |             376 |             71 |
-| San Antonio, TX    |             833 |            178 |
-| San Bernardino, CA |             275 |             82 |
-| San Diego, CA      |             461 |             81 |
-| San Francisco, CA  |             663 |            166 |
-| Savannah, GA       |             246 |             50 |
-| St. Louis, MO      |            1677 |            449 |
-| Stockton, CA       |             444 |            136 |
-| Tampa, FL          |             208 |             56 |
-| Tulsa, AL          |               1 |              0 |
-| Tulsa, OK          |             583 |             83 |
-| Washington, DC     |            1345 |            306 |
+| city_state         | homicides_n | unsolved_n |
+|:-------------------|------------:|-----------:|
+| Albuquerque, NM    |         378 |         75 |
+| Atlanta, GA        |         973 |        172 |
+| Baltimore, MD      |        2827 |        906 |
+| Baton Rouge, LA    |         424 |        102 |
+| Birmingham, AL     |         800 |        192 |
+| Boston, MA         |         614 |        154 |
+| Buffalo, NY        |         521 |        157 |
+| Charlotte, NC      |         687 |        101 |
+| Chicago, IL        |        5535 |       2046 |
+| Cincinnati, OH     |         694 |        151 |
+| Columbus, OH       |        1084 |        308 |
+| Dallas, TX         |        1567 |        381 |
+| Denver, CO         |         312 |         82 |
+| Detroit, MI        |        2519 |        739 |
+| Durham, NC         |         276 |         51 |
+| Fort Worth, TX     |         549 |        125 |
+| Fresno, CA         |         487 |         88 |
+| Houston, TX        |        2942 |        705 |
+| Indianapolis, IN   |        1322 |        309 |
+| Jacksonville, FL   |        1168 |        305 |
+| Kansas City, MO    |        1190 |        251 |
+| Las Vegas, NV      |        1381 |        274 |
+| Long Beach, CA     |         378 |         81 |
+| Los Angeles, CA    |        2257 |        551 |
+| Louisville, KY     |         576 |        139 |
+| Memphis, TN        |        1514 |        259 |
+| Miami, FL          |         744 |        225 |
+| Milwaukee, wI      |        1115 |        197 |
+| Minneapolis, MN    |         366 |         89 |
+| Nashville, TN      |         767 |        130 |
+| New Orleans, LA    |        1434 |        479 |
+| New York, NY       |         627 |        102 |
+| Oakland, CA        |         947 |        255 |
+| Oklahoma City, OK  |         672 |        158 |
+| Omaha, NE          |         409 |         80 |
+| Philadelphia, PA   |        3037 |        684 |
+| Phoenix, AZ        |         914 |        250 |
+| Pittsburgh, PA     |         631 |        169 |
+| Richmond, VA       |         429 |         53 |
+| Sacramento, CA     |         376 |         71 |
+| San Antonio, TX    |         833 |        178 |
+| San Bernardino, CA |         275 |         82 |
+| San Diego, CA      |         461 |         81 |
+| San Francisco, CA  |         663 |        166 |
+| Savannah, GA       |         246 |         50 |
+| St. Louis, MO      |        1677 |        449 |
+| Stockton, CA       |         444 |        136 |
+| Tampa, FL          |         208 |         56 |
+| Tulsa, AL          |           1 |          0 |
+| Tulsa, OK          |         583 |         83 |
+| Washington, DC     |        1345 |        306 |
+
+Next, I run `prop.test` for each of the cities in my dataset
+`summary_by_city` to estimate the proportion of homicides that are
+unsolved in Baltimore, MD.
+
+``` r
+baltimore =
+  summary_by_city %>%
+  filter(city_state == "Baltimore, MD") 
+baltimore_test = prop.test(
+  x = baltimore[["unsolved_n"]],
+  n = baltimore[["homicides_n"]]) %>%
+  broom::tidy() %>%
+  select(estimate, conf.low, conf.high)
+knitr::kable(baltimore_test)
+```
+
+|  estimate |  conf.low | conf.high |
+|----------:|----------:|----------:|
+| 0.3204811 | 0.3033582 | 0.3380962 |
+
+I find an estimate of 0.32 (95% CI: 0.30, 0.34) for the proportion of of
+homicides that are unsolved in Baltimore, MD.
+
+Now,
