--- a/p8105_hw5_jc5313.md
+++ b/p8105_hw5_jc5313.md
@@ -202,3 +202,20 @@ knitr::kable(cities_tests)
 | Tulsa, AL          | 0.0000000 | 0.0000000 | 0.9453792 |
 | Tulsa, OK          | 0.1423671 | 0.1155587 | 0.1739982 |
 | Washington, DC     | 0.2275093 | 0.2055416 | 0.2510548 |
+
+Next, I use create a plot that shows the estimates and CIs of the
+proportion of unsolved homicides for each city. I use `geom_errorbar` to
+add the upper and lower limits.
+
+``` r
+cities_tests %>%
+  mutate(city_state = fct_reorder(city_state, estimate)) %>%
+  ggplot(aes(x = estimate, y = city_state)) + geom_point() + geom_errorbar(aes(xmin = conf.low, xmax = conf.high)) + 
+  labs(
+    title = "Proportion of unsolved homicides in the 50 largest U.S. cities",
+    x = "Proportion of unsolved homicides",
+    y = "City"
+  )
+```
+
+<img src="p8105_hw5_jc5313_files/figure-gfm/unnamed-chunk-6-1.png" width="90%" />
