--- a/p8105_hw5_jc5313.Rmd
+++ b/p8105_hw5_jc5313.Rmd
@@ -43,12 +43,12 @@ homicide =
   janitor::clean_names()
 ```
 
-**Description of raw data**: This homicides dataset collected by The Washington Post includes data on `r nrow(homicide)` in 50 of the largest American cities. The dataset contains `r ncol(homicide)` variables, including: the report date of the murder (`report_date`), the victim's first and last name (`victim_first`, `victim_last`), key demographics of the victim (`victim_race`, `victim_age`, `victim_sex`), the location (`city`, `state`, `lat`, `lon`), and the status of the case (`disposition`). 
+**Description of raw data**: This homicides dataset collected by The Washington Post includes data on `r nrow(homicide)` in 50 of the largest American cities. The dataset contains `r ncol(homicide)` variables, including: the report date of the homicide (`report_date`), the victim's first and last name (`victim_first`, `victim_last`), key demographics of the victim (`victim_race`, `victim_age`, `victim_sex`), the location (`city`, `state`, `lat`, `lon`), and the status of the case (`disposition`). 
 
 
 Next, I will tidy the data by using `mutate` to ensure appropriate data types and to make a `city_state` variable. 
 ```{r}
-homicidetidy = homicide %>%
+homicide_tidy = homicide %>%
   mutate(city_state = as.factor(str_c(city, state, sep = ", ")), 
          reported_date = as.Date(as.character(reported_date),"%Y%m%d"), 
          victim_age = as.numeric(victim_age), 
@@ -61,7 +61,7 @@ homicidetidy = homicide %>%
 
 Now, I will use `group by` and `summarize` to  obtain the total number of homicides and number of unsolved homicides by city and display these totals by city using `kable`.
 ```{r}
-summary_by_city = homicidetidy %>% 
+summary_by_city = homicide_tidy %>% 
   group_by(city_state) %>% 
   summarize(homicides_total = n(), 
             unsolved_total = sum(disposition == c("Closed without arrest", "Open/No arrest")))
@@ -95,7 +95,7 @@ knitr::kable(cities_tests)
 ```
 
 
-Next, I  use create a plot that shows the estimates and CIs of the proportion of unsolved homicides for each city. I use `geom_errorbar` to add the upper and lower limits.
+Next, I create a plot that shows the estimates and CIs of the proportion of unsolved homicides for each city. I use `geom_errorbar` to add the upper and lower limits. The cities are ordered according to proportion of unsolved homicides.
 ```{r}
 cities_tests %>%
   mutate(city_state = fct_reorder(city_state, estimate)) %>%
@@ -109,6 +109,22 @@ cities_tests %>%
 
 
 
+## Problem 3
 
+Here I want to conduct a simulation to explore power in a one-sample t-test. I want to fix the design elements as n = 30, σ = 5. I set μ = 0. 
 
+I begin by generating 5000 datasets that follow x∼Normal[0,5] with n = 30. 
+```{r}
+output = vector("list", 5000)
+for (i in 1:5000) {
+  output[[i]] = rnorm(n = 30, sd = 5, mean = 0)
+  }
+```
 
+Next, I do a t-test and obtain the estimate and p-value.
+```{r}
+t_test = function(x) {
+  t_test_results = t.test(x) %>% 
+  broom::tidy() %>%
+  select(estimate, p.value)}
+```
