--- a/p8105_hw5_jc5313.Rmd
+++ b/p8105_hw5_jc5313.Rmd
@@ -111,20 +111,26 @@ cities_tests %>%
 
 ## Problem 3
 
-Here I want to conduct a simulation to explore power in a one-sample t-test. I want to fix the design elements as n = 30, σ = 5. I set μ = 0. 
+Here I want to conduct a simulation to explore power in a one-sample t-test. 
 
-I begin by generating 5000 datasets that follow x∼Normal[0,5] with n = 30. 
+I fix the design elements as n = 30 and σ = 5, I set μ = 0, and and conduct a t-test.
 ```{r}
-output = vector("list", 5000)
-for (i in 1:5000) {
-  output[[i]] = rnorm(n = 30, sd = 5, mean = 0)
-  }
+sim_function = function(n = 30, mu, sigma = 5) {
+  sim_data = tibble(
+    x = rnorm(n, mean = mu, sd = sigma))
+  return(sim_data)
+output = tibble()
+
+sim_data %>% 
+  t.test(mu = 0, conf.level = 0.95) %>%
+  broom::tidy() %>% unnest()
+}
 ```
 
-Next, I do a t-test and obtain the estimate and p-value.
+Next I generate 5000 datasets.
 ```{r}
-t_test = function(x) {
-  t_test_results = t.test(x) %>% 
-  broom::tidy() %>%
-  select(estimate, p.value)}
+
 ```
+
+
+
