--- a/p8105_hw5_jc5313.md
+++ b/p8105_hw5_jc5313.md
@@ -226,38 +226,23 @@ cities_tests %>%
 Here I want to conduct a simulation to explore power in a one-sample
 t-test.
 
-I fix the design elements as n = 30 and σ = 5, I set μ = 0, and and
-conduct a t-test.
+I fix the design elements as n = 30 and σ = 5, I set μ = 0, and create a
+list of 5000 data.
 
 ``` r
-sim_function = function(n = 30, mu, sigma = 5) {
-  sim_data = tibble(
-    x = rnorm(n, mean = mu, sd = sigma))
-  return(sim_data)
-output = tibble()
-
-sim_data %>% 
-  t.test(mu = 0, conf.level = 0.95) %>%
-  broom::tidy() %>% unnest()
+output = vector("list", length = 50)
+for (i in 1:5000) {
+  output[[i]] = rnorm(n = 30, sd = 5, mean = 0)
 }
 ```
 
-Next I generate 5000 datasets.
+Next I create a function and conduct a t-test.
 
 ``` r
-sim_df = 
-  rerun(5000, sim_function(mu = 0)) %>%
-  bind_rows() 
-```
-
-Now I repeat for μ = {1,2,3,4,5,6}.
-
-``` r
-sim_df_repeat = 
-  tibble(mu = c(1:6)) %>% 
-  mutate(
-    output_lists = map(.x = mu, ~rerun(5000, sim_function(mu = .x))),
-    estimates = map(output_lists, bind_rows)) %>% 
-  select(-output_lists) %>% 
-  unnest(estimates) 
+sim_function = function(x) {
+  results = t.test(x) %>% 
+  broom::tidy() %>%
+  unnest()
+  select(estimate, p.value)
+}
 ```
