--- a/p8105_hw5_jc5313.Rmd
+++ b/p8105_hw5_jc5313.Rmd
@@ -113,20 +113,32 @@ cities_tests %>%
 
 Here I want to conduct a simulation to explore power in a one-sample t-test. 
 
-I fix the design elements as n = 30 and σ = 5, I set μ = 0, and create a list of 5000 data.
+I fix the design elements as n = 30 and σ = 5, I set μ = 0, and create a list of 5000 datasets and conduct t-test.
 ```{r}
-output = vector("list", length = 50)
-for (i in 1:5000) {
-  output[[i]] = rnorm(n = 30, sd = 5, mean = 0)
+sim_function = function(n = 30, mu, sigma = 5) {
+  sim_data = tibble(
+    x = rnorm(n, mean = mu, sd = sigma))
+  return(sim_data)
 }
+output = tibble()
+
+for (i in 1:5000) {
+  output = bind_rows(output, sim_function(mu = 0))
+}
+
+output %>% 
+  t.test(mu = 0, conf.level = 0.95) %>%
+  broom::tidy() %>% 
+  unnest()
 ```
 
-Next I create a function and conduct a t-test.
 ```{r}
-sim_function = function(x) {
-  results = t.test(x) %>% 
-  broom::tidy() %>%
-  unnest()
-  select(estimate, p.value)
-}
+sim_df = 
+  tibble(mu = c(1:6)) %>% 
+  mutate(
+    output = map(.x = mu, ~rerun(5000, sim_function(mu = .x))),
+    estimates = map(output, bind_rows)) %>% 
+  select(-output) %>% 
+  unnest(estimates) 
 ```
+
