--- a/p8105_hw5_jc5313.md
+++ b/p8105_hw5_jc5313.md
@@ -230,35 +230,72 @@ I fix the design elements as n = 30 and σ = 5, I set μ = 0, and create a
 list of 5000 datasets and conduct t-test.
 
 ``` r
-sim_function = function(n = 30, mu, sigma = 5) {
-  sim_data = tibble(
-    x = rnorm(n, mean = mu, sd = sigma))
-  return(sim_data)
-}
-output = tibble()
-
+output = vector("list", length = 50)
 for (i in 1:5000) {
-  output = bind_rows(output, sim_function(mu = 0))
+  output[[i]] = rnorm(n = 30, sd = 5, mean = 0)
 }
-
-output %>% 
-  t.test(mu = 0, conf.level = 0.95) %>%
-  broom::tidy() %>% 
-  unnest()
 ```
 
-    ## # A tibble: 1 × 8
-    ##   estimate statistic p.value parameter conf.low conf.high method         alter…¹
-    ##      <dbl>     <dbl>   <dbl>     <dbl>    <dbl>     <dbl> <chr>          <chr>  
-    ## 1 -0.00508    -0.394   0.693    149999  -0.0303    0.0202 One Sample t-… two.si…
-    ## # … with abbreviated variable name ¹​alternative
+Now, I make a function and conduct a t-test.
 
 ``` r
-sim_df = 
-  tibble(mu = c(1:6)) %>% 
-  mutate(
-    output = map(.x = mu, ~rerun(5000, sim_function(mu = .x))),
-    estimates = map(output, bind_rows)) %>% 
-  select(-output) %>% 
-  unnest(estimates) 
+funct_df = function(x) {
+  result = t.test(x) %>% 
+  broom::tidy() %>%
+  select(estimate, p.value)
+  result
+}
 ```
+
+Next, I combine results.
+
+``` r
+result = tibble(
+  mu = 0,
+  n = 30,
+  sd = 5,
+  t_test_result = map_df(output, funct_df)
+) %>%
+  unnest(t_test_result) 
+```
+
+Now I repeat for μ = {1,2,3,4,5,6}
+
+``` r
+t_test_result = expand.grid(
+  iteration = 1:5000,
+  n = 30,
+  sd = 5,
+  mu = 0:6
+  ) %>%
+  mutate(list = map(.x = mu, ~rnorm(n = 30, sd = 5, mean = .x))) %>%
+  mutate(test_result = map_df(list, funct_df)) %>%
+  unnest(test_result)
+```
+
+Now I create a plot of the proportion of times the null was rejected and
+the true value of μ.
+
+``` r
+plot_1 = 
+  t_test_result %>%
+  mutate(decision = ifelse(p.value < 0.05, "reject", "fail_to_reject")) %>%
+  group_by(mu, decision) %>%
+  summarize(count = n()) %>%
+  pivot_wider(names_from = decision, values_from = count) %>%
+  mutate(Proportion = reject / 5000)
+```
+
+    ## `summarise()` has grouped output by 'mu'. You can override using the `.groups`
+    ## argument.
+
+``` r
+plot_1 %>%
+  ggplot(aes(x = mu, y = Proportion)) + 
+  geom_point() + geom_line() +
+  labs(
+    x = "True value of μ",
+    y = "Proportion of times the null was rejected")
+```
+
+<img src="p8105_hw5_jc5313_files/figure-gfm/unnamed-chunk-11-1.png" width="90%" />
